--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,11 +8,12 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  height: 25rem;
 }
 
 @media screen and (max-width: 996px) {
   .heroBanner {
-    padding: 2rem;
+    height: calc(100vh - var(--ifm-navbar-height));
   }
 }
 
