--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -62,9 +62,9 @@
 }
 
 iframe {
-  margin-top: 2rem;
-  width: 100%;
-  height: 30rem;
+  margin: 1rem;
+  width: calc(100% - 2rem);
+  height: 25rem;
 }
 
 .button {
