--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,65 +4,42 @@
  * work well for content-centric websites.
  */
 
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Sora:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&family=Sora:wght@400;600&display=swap');
 
-/* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #6528D7;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #f2cef0;
-  --ifm-color-primary-lighter: #F1E6F6;
-  --ifm-color-primary-lightest: #F8F5FE;
-  --ifm-color-success-contrast-background: var(--ifm-color-primary-lighter);
-  --ifm-color-success-dark: var(--ifm-color-primary);
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --light-gray: #D3CBE1;
+  --dark-gray: #202932;
+  --black: #111718;
+  --purple: #9D6BFF;
+  --dark-purple: #6528D7;
+  --transparent-purple: rgba(157, 107, 255, 0.075);
+  --ifm-color-primary: var(--purple);
+  --ifm-color-content: white;
+  --border-radius: 1rem;
   --ifm-heading-font-family: "Sora";
   --ifm-font-family-base: "Plus Jakarta Sans";
-  --ifm-menu-color-background-active: #F8F5FE;
-  --ifm-menu-color-background-hover: #F8F5FE;
-  --light-gray: #D9D9D9;
-  --nice-border: 1px solid #eee;
-  --border-radius: 12px;
-  --primary-black: var(--ifm-color-primary);
-  --smooth-shadow: 0 0 30px 0 #eee;
+  --ifm-color-content-secondary: var(--light-gray) !important;
+  --ifm-hover-overlay: var(--transparent-purple) !important;
+  --ifm-color-info-contrast-background: var(--transparent-purple) !important;
+  --ifm-color-success-contrast-background: var(--transparent-purple) !important;
+  --ifm-color-danger-contrast-background: var(--transparent-purple) !important;
+  --ifm-color-warning-contrast-background: var(--transparent-purple) !important;
+  --ifm-color-success-dark: var(--purple) !important;
+  --ifm-color-info-dark: var(--purple) !important;
+  --ifm-color-danger-dark: var(--purple) !important;
+  --ifm-color-warning-dark: var(--purple) !important;
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #1f3a34;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-  --primary-black: black;
-  --light-gray: #323232;
-  --dark-gray: #090a0a;
-  --ifm-menu-color-background-active: #242526;
-  --ifm-menu-color-background-hover: #242526;
-  --ifm-color-success-contrast-background:var(--dark-gray) !important;
-  --ifm-color-danger-contrast-background:var(--dark-gray) !important;
-  --ifm-color-warning-contrast-background:var(--dark-gray) !important;
-  --ifm-color-info-contrast-background:var(--dark-gray) !important;
-  --smooth-shadow: 0 0 30px 0 #0d0d0d;
-  --nice-border: 1px solid #444;
+html {
+  background-color: var(--dark-gray);
 }
 
-.alert--success {
-  --ifm-alert-background-color-highlight: var(--ifm-color-primary-light);
+p {
+ color: var(--light-gray)
 }
 
-.footer--dark {
-  border-top: var(--nice-border);
-  --ifm-footer-background-color: var(--color-background);
-  --ifm-footer-color: gray;
-  --ifm-footer-link-color: gray;
-  --ifm-footer-title-color: gray;
+strong {
+  color: white;
 }
 
 iframe {
@@ -71,31 +48,32 @@ iframe {
   height: 25rem;
 }
 
+h1 {
+  font-weight: 300;
+}
+
+.footer,
+.navbar {
+  background-color: var(--black);
+  display: none;
+}
+
+.navbar-sidebar__brand {
+  background-color: var(--black);
+}
+
 .button {
   border-radius: var(--border-radius);
 }
 
 .button.button--secondary {
-  color: var(--primary-black);
+  color: var(--ifm-color-primary);
+  fill: var(--ifm-color-primary);
+  font-weight: 600;
   height: 3.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.navbar {
-  height: 6rem;
-  box-shadow: none;
-  border-bottom: var(--nice-border);
-}
-
-.navbar__logo img {
-  height: 3rem;
-  margin-left: 1.5rem;
-}
-
-[data-theme="dark"] .navbar__logo img {
-  filter: invert();
 }
 
 .col {
@@ -108,24 +86,28 @@ iframe {
 
 .menu {
   border-right: none;
-  margin: 1.5rem 1.3rem 0 0;
-  box-shadow: var(--smooth-shadow);
+  margin: 0 1.3rem 0 0;
   border-radius: var(--border-radius);
   padding-left: 1rem !important;
+  background-color: var(--black);
 }
 
-.theme-doc-markdown {
+article {
   margin: 1rem;
   padding: 2rem;
-  box-shadow: var(--smooth-shadow);
   border-radius: var(--border-radius);
+  background-color: var(--black);
 }
 
 [class="tableOfContents_node_modules-@docusaurus-theme-classic-lib-theme-TOC-styles-module thin-scrollbar theme-doc-toc-desktop"] {
-  box-shadow: var(--smooth-shadow);
   border-radius: var(--border-radius);
   padding-left: 1.3rem;
-  top: calc(var(--ifm-navbar-height) + 6rem) !important;
+  top: 2rem !important;
+  background-color: var(--black);
+}
+
+[class="sidebar_node_modules-@docusaurus-theme-classic-lib-theme-DocSidebar-Desktop-styles-module"] {
+  padding-top: 2rem !important;
 }
 
 [class="iconExternalLink_node_modules-@docusaurus-theme-classic-lib-theme-Icon-ExternalLink-styles-module"] {
@@ -153,5 +135,9 @@ iframe {
 
   .pagination-nav {
     margin: 1rem;
+  }
+
+  .navbar {
+    display: unset;
   }
 }
