Update docs build

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -30,9 +30,9 @@
   --ifm-color-warning-dark: var(--purple) !important;
 }
 
-html {
-  background-color: var(--dark-gray);
-}
+/*html {*/
+/*  background-color: var(--dark-gray);*/
+/*}*/
 
 p {
  color: var(--light-gray)
