--- a/src/components/Layout/Header/header.module.css
+++ b/src/components/Layout/Header/header.module.css
@@ -24,3 +24,17 @@
 .nav a:hover {
   color: rgb(188, 241, 36);
 }
+
+.nav_end {
+  visibility: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+  .nav_end {
+    display: none;
+  }
+  .nav {
+    display: flex;
+    gap: 24px;
+  }
+}
