--- a/src/components/Layout/styles.module.css
+++ b/src/components/Layout/styles.module.css
@@ -1,20 +1,10 @@
-.layoutBackgroundParent {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: -1;
-  overflow: hidden;
-}
-
-.layoutBackground {
-  position: absolute;
+.gradientBackground {
   background-color: var(--dark-gray);
-  opacity: 1;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  inset: 0;
+  overflow: hidden;
   z-index: -1;
+  opacity: 0.35;
 }
 
 @keyframes accent-movement {
@@ -44,9 +34,6 @@
   width: 200%;
   background-color: var(--dark-gray);
   background: radial-gradient(circle, #6528d750 0%, transparent 70%);
-  z-index: -1;
-  overflow: hidden;
-
   animation: accent-movement 60s infinite;
 }
 
@@ -77,8 +64,5 @@
   width: 200%;
   background-color: var(--dark-gray);
   background: radial-gradient(circle, #bcf12450 0%, transparent 70%);
-  z-index: -1;
-  overflow: hidden;
-
   animation: main-movement 60s infinite;
 }
