feat: set up basic styling

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,27 +4,40 @@
  * work well for content-centric websites.
  */
 
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@400;600&display=auto");
+
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #6528D7;
+  --ifm-color-primary-dark: #6528D7;
+  --ifm-color-primary-darker: #6528D7;
+  --ifm-color-primary-darkest: #6528D7;
+  --ifm-color-primary-light: #6528D7;
+  --ifm-color-primary-lighter: #6528D7;
+  --ifm-color-primary-lightest: #6528D7;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-heading-font-family: "Sora";
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #bcf124;
+  --ifm-color-primary-dark: #bcf124;
+  --ifm-color-primary-darker: #bcf124;
+  --ifm-color-primary-darkest: #bcf124;
+  --ifm-color-primary-light: #bcf124;
+  --ifm-color-primary-lighter: #bcf124;
+  --ifm-color-primary-lightest: #bcf124;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+iframe {
+  margin: 1rem;
+  width: calc(100% - 2rem);
+  height: 25rem;
+}
+
+.navbar__logo {
+  fill: var(--ifm-color-primary);
 }
