--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,11 +34,27 @@
 }
 
 iframe {
-  margin: 1rem;
-  width: calc(100% - 2rem);
-  height: 25rem;
+  margin: 0rem;
+  width: 100%;
+  height: 30rem;
 }
 
 .navbar__logo {
   fill: var(--ifm-color-primary);
+}
+
+.full-screen-btn {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  outline: none;
+  border: none;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.full-screen-btn:hover {
+  background-color: #bcf124;
+  cursor: pointer;
+  color: black
 }
